Imagens Linux Adicionadas/Nome mudado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ForcaGame</string>
+    <string name="app_name">Linuquiz</string>
     <string name="join">Entrar</string>
     <string name="email">Email</string>
     <string name="password">Senha</string>
